# libpiccolort

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md
doc/html/: README_8md.html  annotated.html  channel_8c.html  channel_8h.html  channel_8h_source.html  classes.html  commit_8c.html  commit_8h.html  commit_8h_source.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  entry_8c.html  (+82 more)
include/: #knownset.h#  .runtime_tests.h.swp  atomic.h  atomic_repr.h  channel.h  channel_repr.h  commit.h  commit_repr.h  commit_test.h  concurrent.h  definitions.h  entry.h  error.h  errors.h  gc.h  gc_repr.h  knownset.h  knownset_repr.h  pi_thread.h  pi_thread.h~  pi_thread_repr.h  pithread.h  pithread_test.h  primitives.h  queue.h  queue_repr.h  runtime.h  runtime_tests.h  scheduler.h  scheduler_repr.h  set.h  symbols.h  sync.h  tools.h  try_action.h  tryaction.h  value.h  value_repr.h
src/: .commit.c.swp  .main.c.swp  .pi_thread.c.swp  atomic.c  channel.c  commit.c  concurrent.c  entry.c  error.c  gc.c  knownset.c  knownset_list.c  knownset_tree.c  main.c  pi_thread.c  primitives.c  primitives.h  queue.c  runtime.c  runtimeTests.c  scheduler.c  set.c  set_functions.c  sync.c  tools.c  try_action.c  value.c  value_repr.c
tests/: .runtime_test.c.swp  atomic_test.c  channel_test.c  commit_test.c  knownset_test.c  main_test  main_test.c  pingpong_test.c  pithread_test.c  queueTest.c  queue_test.c  run.c  runtimeTests.c  runtime_test.c  runtime_test.oldc  set_test.c  tests.h  value_test.c
(+183 files in other folders)
